--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -14,7 +14,7 @@ IMPORTANT: Esse manifesto visa conscientizar e abolir qualquer evento abusivo de
 - Tenha Hackaflag patrocinado por vendor. CTF com ferramenta de vendor com ataques de 1980 para participantes desprovidos intelectualmente não passarão
 - Patrocinador não dê brinde. todo stand de patrocinador tem que dar brinde!!! Porque sim!!!
 - Não tenha nenhum tipo de constrangimento público. Tem que ter leak nos banheiros
-- Tenha divisão de patrocínios de vendors por platinum, gold, prata e bronze - pois Sec é apenas uma questão de ego afinal...
+- Não tenha divisão de patrocínios de vendors por platinum, gold, prata e bronze - pois Sec é apenas uma questão de ego afinal...
 - Se rolar briga, ninguém poderá apartar - O evento é o momento de resolver desavenças entre profissionais da área. Quando a lógica não funciona, sempre tem o brute-force 
 - Impeça o aliciamento em cima de profissionais, o qual tem de der pesado, afinal o cibercrime também é autorizado a recrutar
 - Não faça vista grossa para drogas ilícitas
