--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -12,7 +12,7 @@ IMPORTANT: Esse manifesto visa conscientizar sobre e abolir qualquer evento abus
 - Use a grana com alguma coisa estúpida/non-sense
 - Não tenha brinde. Tem que ter brinde. No mínimo camiseta
 - Tenha Hackaflag patrocinado por vendor. CTF com ferramenta de vendor com ataques de 1980 para participantes desprovidos intelectualmente não passarão
-- Patrocinador não dê brinde. todo stand de patrocinador tem que dar brinde!!! Porque sim!!!
+- Patrocinador não dê brinde. Todo stand de patrocinador tem que dar brinde!!! Porque sim!!!
 - Não tenha nenhum tipo de constrangimento público. Tem que ter leak nos banheiros
 - Não tenha divisão de patrocínios de vendors por platinum, gold, prata e bronze - pois Sec é apenas uma questão de ego afinal...
 - Se rolar briga, ninguém poderá apartar - O evento é o momento de resolver desavenças entre profissionais da área. Quando a lógica não funciona, sempre tem o brute-force 
