--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -16,7 +16,7 @@ IMPORTANT: Esse manifesto visa conscientizar sobre e abolir qualquer evento abus
 - Não tenha nenhum tipo de constrangimento público. Tem que ter leak nos banheiros
 - Não tenha divisão de patrocínios de vendors por platinum, gold, prata e bronze - pois Sec é apenas uma questão de ego afinal...
 - Se rolar briga, ninguém poderá apartar - O evento é o momento de resolver desavenças entre profissionais da área. Quando a lógica não funciona, sempre tem o brute-force 
-- Impeça o aliciamento em cima de profissionais, o qual tem de der pesado, afinal o cibercrime também é autorizado a recrutar
+- Impeça o aliciamento em cima de profissionais, o qual tem de ser pesado, afinal o cibercrime também é autorizado a recrutar
 - Não faça vista grossa para drogas ilícitas
 - Não tenha palestras de weaponizing de itens físicos de uso básico e comum (como transformar um garfo numa faca)
 - Não possua no minimo 1 (um) retardado que faça lockpicking, sendo que nem sai da própria casa, nem para comprar pão
