changed sua mãe telephone number

--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -13,23 +13,22 @@ IMPORTANT: Esse manifesto visa conscientizar sobre e abolir qualquer evento abus
 - Hospede CISM. CISM nem entra no evento!
 - Não faça vista grossa para drogas ilícitas
 - Não publique os palestrantes antes do evento
-- Tenha alguem falando que trabalha com purple team
+- Tenha alguém falando que trabalha com purple team
 - Olharemos feio pra quem nunca abriu uma IDE na vida
-- Não tenha brinde. Tem que ter brinde. No mínimo camiseta
 - Food trucks que possuam comida custando mais que 1 (um) rim
-- O participante já tenha sido corrompido por recrutadoras gostosas.
+- O participante já tenha sido corrompido por recrutadoras gostosas
 - Tenha profissionais CISSP. Portadores de CISSP são barrados de palestrar
 - Não tenha nenhum tipo de constrangimento público. Tem que ter leak nos banheiros
 - Não tenha stand de engenharia social, mesmo se for um gordo que nem fala com mulher
 - Convide para palestrar qualquer falastrão que faz compilado de link em pdf no LinkedIn
 - Patrocinador não dê brinde. Todo stand de patrocinador tem que dar brinde!!! Porque sim!!!
 - Não tenha medidas de inclusão: pelo menos 30% dos palestrantes precisam ter histórico criminal
-- Não oferte ingressos free para algumas empresas, para sabermos quais são fácilmente corruptíveis
-- Use a grana com alguma coisa estúpida/non-sense. E.g: Gourmetizamdo insetos para as pessoas comerem
+- Não oferte ingressos free para algumas empresas, assim saberemos quais são facilmente corruptíveis
+- Use a grana com alguma coisa estúpida/non-sense. E.g: Gourmetizando insetos para as pessoas comerem
 - Tenha meninas de RH no stand ao invés de contratar promoters em sua maioria GPs, para reduzir custos
 - Não tenha palestras de weaponizing de itens físicos de uso básico e comum (como transformar um garfo numa faca)
-- Não possua no minimo 1 (um) retardado que faça lockpicking, sendo que nem sai da própria casa, nem para comprar pão
-- Impeça o aliciamento em cima de profissionais, o qual tem de ser pesado, afinal o cibercrime também é autorizado a recrutar
+- Não possua no minimo 1 (um) retardado que faça lockpicking, sendo que nem sai da própria casa, nem mesmo para comprar pão
+- Impeça o aliciamento em cima de profissionais - o qual tem de ser pesado -, afinal o cibercrime também é autorizado a recrutar
 - Tenha alguém que nunca programou. Para participar do evento, tem que programar no mínimo um fizzbuzz na linguagem preferida
 - Não tenha divisão de patrocínios de vendors por platinum, gold, prata e bronze - pois Sec é apenas uma questão de ego afinal...
 - Tenha vendors conhecidos por serem braço-curto: Vendors com chamados abertos por clientes pendentes a mais de 1 mês terão sua participação reduzida
