sua mãe - remaster

--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -24,6 +24,7 @@ IMPORTANT: Esse manifesto visa conscientizar sobre e abolir qualquer evento abus
 - Convide para palestrar qualquer falastrão que faz compilado de link em pdf no LinkedIn
 - Patrocinador não dê brinde. Todo stand de patrocinador tem que dar brinde!!! Porque sim!!!
 - Não tenha medidas de inclusão: pelo menos 30% dos palestrantes precisam ter histórico criminal
+- Possuir algum retardado trazendo palestra de burnout como se fosse um problema exclusivo de SI
 - Não oferte ingressos free para algumas empresas, assim saberemos quais são facilmente corruptíveis
 - Use a grana com alguma coisa estúpida/non-sense. E.g: Gourmetizando insetos para as pessoas comerem
 - Tenha meninas de RH no stand ao invés de contratar promoters em sua maioria GPs, para reduzir custos
