--- a/README.adoc
+++ b/README.adoc
@@ -6,5 +6,12 @@
 puts "Hello, World!"
 ----
 
-== Heading 2
-=== Heading 3
+== First of all
+
+It's very unusual to start a blog posting or even a blog platform altogether under the effect of magical mushrooms but yeah... I bet someone somewhere else did this exact same thing before...
+
+My name is doug (lowercase because I host a plethora of other dimensions of "self" pretty much - and unfortunately - unadressed whenever I may go). 
+
+Being alive for quite some time, and watched this reality for so long, brings me to the very objective question: 
+
+> "What kind of architecture and in which level of abstraction does the code that sustains it all, run?"
