changes to doc attribs

--- a/README.adoc
+++ b/README.adoc
@@ -40,6 +40,8 @@ puts "Hello, World!"
 
 Water (stem:[H_2O]) is a critical component.
 
+.Account scheme
+image:account-scheme.png[]
 
 == First of all
 
