--- a/README.adoc
+++ b/README.adoc
@@ -41,8 +41,8 @@ My name is doug (lowercase because I host a plethora of other dimensions of "sel
 
 Being alive for quite some time, and watched this reality for so long, brings me to the very objective question: 
 
-> "What kind of architecture and in which level of abstraction does the code that sustains it all, run?"
-
+[quote,me]
+What kind of architecture and in which level of abstraction does the code that sustains it all, run?
 
 == Posts
 
